  with some files to open as argument if a jEdit server is running
  (#3173669 - Matthieu Casanova)

- Fixed wrong mode detection on drag and drop from GNOME Commander.
  (#3374207 - Shlomy Reinstein)

- Fixed deadlock (jEdit freeze) when multiple files are dragged into the text
  area from file managers. (Shlomy Reinstein)

}}}
{{{ API Changes

- Added EnhancedTreeCellRenderer to be used as Look and Feel change aware
  alternative base class instead of DefaultTreeCellRenderer for custom
  TreeCellRenderers. (Björn "Vampire" Kautler)

- Added TaskAdapter that is a default implementation of the TaskListener
  (Matthieu Casanova)

- TaskManager.countTasks() returns the number of tasks in queue
  (Matthieu Casanova)

- New methods JEditBuffer.setContextInsensitive(boolean) and
  JEditBuffer.GetContextInsensitive() to manage the new attribute
  contextInsensitive of JEditBuffer. By default it is set by the
  edit mode, but you can change it's value (careful, it can break
  the syntax highlight of your buffer if you don't know what you do)
  (Matthieu Casanova)

- New method TextArea.getVisibleLineText(screenLine) and
  TextArea.getVisibleLineSegment() that returns
  the visible part of the given line (Matthieu Casanova)

- AbstractOptionPane.save() and AbstractOptionPane.init() are now
  final as they should be since jEdit 4.2

- API made public:
  org.gjt.sp.jedit.browser.VFSFileNameField (Marcelo Vanzin)

- API made private:
  FileVFS.modified
  (Matthieu Casanova)

- Removed Deprecated apis :
  EditPlugin.createMenuItems(Vector menuItems)
  EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
  HistoryModel.clear()
  JEditTextArea.getSelectionStart()
  JEditTextArea.getSelectionStart(int line)
  JEditTextArea.getSelectionStartLine()
  JEditTextArea.setSelectionStart(int selectionStart)
  JEditTextArea.getSelectionEnd()
  JEditTextArea.getSelectionEnd(int line)
  JEditTextArea.getSelectionEndLine()
  JEditTextArea.setSelectionEnd(int selectionEnd)